force-app/main/default/objects/Sample_Tracking__c/Sample_Tracking__c.object-meta.xml
<CustomObject>
    <description>Created to manage Aspen sample products given to customers</description>
    <label>Sample Tracking</label>
    <nameField>
        <displayFormat>Sample - {000000000}</displayFormat>
        <label>Sample Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>