force-app/main/default/objects/Sample_Tracking__c/fields/Date_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Date_Distributed__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Distributed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>