force-app/main/default/objects/Sample_Tracking__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>